--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "firstassync",
 	"private": true,
-	"homepage": "https://sakagava.github.io/myFirstSocialNetwork/",
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
 		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview"
+		"preview": "vite preview",
+		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.3",
