--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-	"name": "firstassync",
+	"name": "my-first-social-network-ts",
 	"private": true,
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
 		"dev": "vite",
-		"build": "vite build",
-		"lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-		"preview": "vite preview",
-		"deploy": "gh-pages -d dist"
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
 	},
 	"dependencies": {
 		"@emotion/react": "^11.11.3",
@@ -16,8 +15,6 @@
 		"@mui/icons-material": "^5.15.10",
 		"@mui/material": "^5.15.10",
 		"@reduxjs/toolkit": "^2.1.0",
-		"localforage": "^1.10.0",
-		"match-sorter": "^6.3.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-intersection-observer": "^9.8.0",
@@ -25,17 +22,18 @@
 		"react-router-dom": "^6.22.1",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^3.1.0",
-		"sort-by": "^1.2.0"
+		"yup": "^1.4.0"
 	},
 	"devDependencies": {
-		"@types/react": "^18.2.43",
-		"@types/react-dom": "^18.2.17",
+		"@types/react": "^18.2.66",
+		"@types/react-dom": "^18.2.22",
+		"@typescript-eslint/eslint-plugin": "^7.2.0",
+		"@typescript-eslint/parser": "^7.2.0",
 		"@vitejs/plugin-react": "^4.2.1",
-		"eslint": "^8.55.0",
-		"eslint-plugin-react": "^7.33.2",
+		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.0",
-		"eslint-plugin-react-refresh": "^0.4.5",
-		"gh-pages": "^6.1.1",
-		"vite": "^5.1.4"
+		"eslint-plugin-react-refresh": "^0.4.6",
+		"typescript": "^5.2.2",
+		"vite": "^5.2.0"
 	}
 }
