--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
 	"dependencies": {
 		"@emotion/react": "^11.11.3",
 		"@emotion/styled": "^11.11.0",
+		"@hookform/resolvers": "^3.3.4",
 		"@mui/icons-material": "^5.15.10",
 		"@mui/material": "^5.15.10",
 		"@reduxjs/toolkit": "^2.1.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hook-form": "^7.51.1",
+		"react-imask": "^7.5.0",
 		"react-intersection-observer": "^9.8.0",
+		"react-number-format": "^5.3.4",
 		"react-redux": "^9.1.0",
 		"react-router-dom": "^6.22.1",
 		"redux-persist": "^6.0.0",
 		"redux-thunk": "^3.1.0",
-		"yup": "^1.4.0"
+		"zod": "^3.22.4"
 	},
 	"devDependencies": {
 		"@types/react": "^18.2.66",
